--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "manifest_version":2,
     "browser_action":{
         "default_title":"Password Manager",
-        "default_popup":"index.html",
+        "default_popup":"./dist/index.html",
         "default_icon":"logo.png"
     },
     "icons":{
